--- a/client/room.html
+++ b/client/room.html
@@ -1,15 +1,11 @@
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
-</head>
-<body>
+
+	<template name="app">
     {{> header}}
     {{> loginButtons}}
     <div class="main">
+	    
       {{> listings}}
-        {{> messages}}
+      {{> yield}}
     </div>
    {{> footer}}
-</body>
+	</template>
